--- a/README
+++ b/README
@@ -37,11 +37,16 @@ You can also look for information at:
     Search CPAN
         http://search.cpan.org/dist/Bio-GenBankParser
 
+PROJECT HOME/SOURCE
 
-COPYRIGHT AND LICENCE
+The project's home and Subversion repository are kindly hosted by
+Google Code:
+
+    http://code.google.com/p/perl-genbank-parser/
+
+COPYRIGHT AND LICENSE
 
 Copyright (C) 2008 Ken Youens-Clark
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
-
