--- a/Changes
+++ b/Changes
@@ -8,14 +8,19 @@ Revision history for Bio-GenBankParser
         docs, expanded example script a bit, allowed a RefSeq accession to 
         be valid in the parser.
 
-0.03    2008-01-31
-        Fixes to parsing of FEATURES.
+0.03    2008-03-06
+        Added project line, fixed base summary.
 
 0.04    2008-06-20
-        Handle empty records, genbank division in LOCUS is now optional,
-        added ability to comment out a line using a leading "#," genbank
+        Changed locus name, not necessarily a genbank accession. Handle
+        empty records, genbank division in LOCUS is now optional, added
+        ability to comment out a line using a leading "#," genbank
         accession is now just /\w+/, sequence length can be "aa" or
         "bp," take the first accession from ACCESSION and put the rest
         into VERSION, added DBSOURCE, authors is optional in reference
         and remarks can appear in two places(?!), finally fixed handling
-        of PUBMED (?), added "CONSRTM."
+        of PUBMED (?), added "CONSRTM."  Keep remark undef to maintain
+        backward-compat.
+
+0.05    2010-06-22
+        Added CONTIG parser.  Fixed "ACCESSION" to parse multiple lines.
